Changes to Copy and Styling
Added more personal and accurate copy. Updated styling of text.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <div>
-    <h1>This page is under construction.</h1>
+    <h1>The Beginning of Something New (For Me)</h1>
+    <p>Although this page appears to be quite barren, with nothing more than a white box on a not as white background, it must be imagined to be more. There is much more happening behind the scenes on this page than is ready to be seen.</p>
+    <p>As such, I must (for now) leave you with nothing, save perhaps a slight curiosity or, more likely, an emotion that is equal parts upset and boredom.</p>
   </div>
 </body>
 </html>
