--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
+<!DOCTYPE HTML>
+
 <html>
+
 <head>
-  <title>Blogging and Photography by Johnny McNeil</title>
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>TBoSN</title>
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+	<link href="stylesheet.css" rel="stylesheet">
 </head>
+
 <body>
-  <div>
-    <h1>The Beginning of Something New (For Me)</h1>
-    <p>Although this page appears to be quite barren, with nothing more than a white box on a not as white background, it must be imagined to be more. There is much more happening behind the scenes on this page than is ready to be seen.</p>
-    <p>As such, I must (for now) leave you with nothing, save perhaps a slight curiosity or, more likely, an emotion that is equal parts upset and boredom.</p>
-  </div>
+
+	<div class="flex-container">
+	
+		<h1>The Beginning of Something New</h1>
+		
+		<img src="img/sexyavatar.jpg">
+		
+		<p>Although this page appears to be quite barren, with nothing more than a white box on a not as white background, it must be imagined to be more. There is much more happening behind the scenes on this page than is ready to be seen.</p>
+		
+		<p>As such, I must (for now) leave you with nothing, save perhaps a slight curiosity or, more likely, an emotion that is equal parts upset and boredom.</p>
+	
+	</div>
+	
 </body>
+
 </html>
