Added call to action.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 					<h1>I operate a photography and video production company.</h1>
 
+					<a href="http://studiomcneil.com" class="action">Go to StudioMcNeil.com!<a>
+
 					<p>Although this page appears to be quite barren, with nothing more than simple copy on a white background, it must be imagined to be more. There is much more happening behind the curtains of this stage than is ready to be seen.</p>
 
 					<p>As such, I must (for now) leave you with nothing, save perhaps a slight curiosity or, more likely, an emotion that is equal parts boredom and upset.</p>
