--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
@@ -7,32 +8,46 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,700" rel="stylesheet">
 
-	<link href="stylesheet.css" rel="stylesheet">
+	<link href="css/stylesheet.css" rel="stylesheet">
 </head>
 
+
 <body>
+
 	<div class="flex-container">
+	
 		<header>
-			<h1>The Beginning of Something <span class="color-shift">New</span></h1>
+		
+			<h1>The Beginning of <span class="color-shift">Something New</span></h1>
+			
 		</header>
 
+		
 		<section>
+		
 			<article>
-				<img class="large-avatar" src="img/sexyavatar.jpg">
-				<div>
-					<img class="inline-avatar" src="img/sexyavatar.jpg">
+			
+				<img src="img/sexyavatar.jpg">
 
-					<h1>I operate a photography and video production company.</h1>
+				<h1>I operate a photography and video production company.</h1>
 
-					<a href="http://studiomcneil.com" class="action">Go to StudioMcNeil.com!<a>
+				<p>Although this page appears to be quite barren, with nothing more than simple copy on a white background, it must be imagined to be more. There is much more happening behind the curtains of this stage than is ready to be seen.</p>
 
-					<p>Although this page appears to be quite barren, with nothing more than simple copy on a white background, it must be imagined to be more. There is much more happening behind the curtains of this stage than is ready to be seen.</p>
-
-					<p>As such, I must (for now) leave you with nothing, save perhaps a slight curiosity or, more likely, an emotion that is equal parts boredom and upset.</p>
-				</div>
+				<p>As such, I must (for now) leave you with nothing, save perhaps a slight curiosity or, more likely, an emotion that is equal parts boredom and upset.</p>
+				
 			</article>
+			
 		</section>
-		<footer><h2>&copy; 2016 Jonathan McNeil</h2></footer>
+		
+		
+		<footer>
+		
+			<h2>&copy; 2016 Jonathan McNeil</h2>
+			
+		</footer>
+		
 	</div>
+	
 </body>
+
 </html>
