--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-	<title>TBoSN</title>
+	<title>Johnny McNeil</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,700" rel="stylesheet">
 
-	<link href="css/stylesheet.css" rel="stylesheet">
 </head>
 
 
 <body>
-<<<<<<< HEAD
 	<div id="particles-js"></div>
 	<script src="res/particles.js"></script>
 	<script>
@@ -22,43 +20,6 @@
 		  console.log('callback - particles.js config loaded');
 		});
 	</script>
-=======
-
-	<div class="flex-container">
-	
-		<header>
-		
-			<h1>The Beginning of <span class="color-shift">Something New</span></h1>
-			
-		</header>
-
-		
-		<section>
-		
-			<article>
-			
-				<img src="img/sexyavatar.jpg">
-
-				<h1>I operate a photography and video production company.</h1>
-
-				<p>Although this page appears to be quite barren, with nothing more than simple copy on a white background, it must be imagined to be more. There is much more happening behind the curtains of this stage than is ready to be seen.</p>
-
-				<p>As such, I must (for now) leave you with nothing, save perhaps a slight curiosity or, more likely, an emotion that is equal parts boredom and upset.</p>
-				
-			</article>
-			
-		</section>
-		
-		
-		<footer>
-		
-			<h2>&copy; 2016 Jonathan McNeil</h2>
-			
-		</footer>
-		
-	</div>
-	
->>>>>>> origin/master
 </body>
 
 </html>
