--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 	<title>Johnny McNeil</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,700" rel="stylesheet">
-
+	<style>
+	html, body {
+		padding: 0;
+		margin: 0;
+	}
+		#particles-js {
+			width: 100%;
+			height: 100%;
+		}
+	</style>
 </head>
 
 
