--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,700" rel="stylesheet">
 	<style>
 	html, body {
-		padding: 0;
+		height: 100%;
+		width: 100%;
+		background: #3D3D3D;
 		margin: 0;
+		padding: 0;
 	}
 		#particles-js {
 			width: 100%;
