--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,700" rel="stylesheet">
 	<style>
-	html, body {
-		height: 100%;
-		width: 100%;
-		background: #3D3D3D;
-		margin: 0;
-		padding: 0;
-	}
+		html, body {
+			height: 100%;
+			width: 100%;
+			background: #3D3D3D;
+			margin: 0;
+			padding: 0;
+		}
+		canvas {
+			display: block;
+			vertical-align: bottom;
+		}
 		#particles-js {
 			width: 100%;
 			height: 100%;
+		  background-color: #3D3D3D;
+		  background-image: url('');
+		  background-size: cover;
+		  background-position: 50% 50%;
+		  background-repeat: no-repeat;
 		}
 	</style>
 </head>
