--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
 	<title>Johnny McNeil</title>
 
-	<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,700" rel="stylesheet">
-	<style>
+
+	<script src="http://www.jsdelivr.com/#!particles.js"></script>
+
+	<style type="text/css">
 		html, body {
 			height: 100%;
 			width: 100%;
@@ -29,7 +31,6 @@
 		  background-repeat: no-repeat;
 		}
 	</style>
-	<script src="http://www.jsdelivr.com/#!particles.js"></script>
 </head>
 
 
@@ -37,8 +38,7 @@
 	<div id="particles-js"></div>
 	<script>
 		/* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
-		particlesJS('particles-js', 'res/particles.json');
+		particlesJS('particles-js', '/res/particles.json');
 	</script>
 </body>
-
 </html>
