--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Johnny McNeil</title>
 
 
-	<script src="http://www.jsdelivr.com/#!particles.js"></script>
+	<script src="res/particles.js"></script>
 
 	<style type="text/css">
 		html, body {
@@ -38,7 +38,7 @@
 	<div id="particles-js"></div>
 	<script>
 		/* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
-		particlesJS('particles-js', '/res/particles.json');
+		particlesJS('particles-js', 'res/particles.json');
 	</script>
 </body>
 </html>
