--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div id="particles-js"></div>
 	<script>
 		/* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
-		particlesJS('particles-js', 'res/particles.json');
+		particlesJS('particles-js', '/res/particles.json');
 	</script>
 </body>
 </html>
