--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>Johnny McNeil</title>
 
-
+	<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,700,700i|Montserrat:400,400i" rel="stylesheet">
 	<script src="res/particles.js"></script>
 
 	<style type="text/css">
@@ -30,6 +30,12 @@
 		  background-position: 50% 50%;
 		  background-repeat: no-repeat;
 		}
+		h1 {
+			font-family: 'Montserrat', sans-serif;
+		}
+		p {
+			font-family: 'Crimson Text', serif;
+		}
 	</style>
 </head>
 
@@ -40,5 +46,9 @@
 		/* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
 		particlesJS.load('particles-js', 'res/particles.json');
 	</script>
+
+	<h1>Hello World, I'm Johnny.</h1>
+	<p>I am an artist and programmer. This is where my things live.</p>
+
 </body>
 </html>
