Finalized for now

--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
 		}
 		#container {
 			position: absolute;
-			width: 60%;
-			top: 25%;
-			left: 20%;
+			width: 90%;
+			top: 5%;
+			left: 5%;
 			color: #FFF;
 			z-index: 2;
 		}
 		h1 {
-			font-size: 32pt;
+			font-size: 36pt;
 			font-family: 'Montserrat', sans-serif;
 		}
 		p {
-			font-size: 16pt;
+			font-size: 24pt;
 			font-family: 'Crimson Text', serif;
 		}
 	</style>
@@ -60,7 +60,7 @@
 	</script>
 	<div id="container">
 		<h1>Hello World, I'm Johnny.</h1>
-		<p>I am an artist and programmer. This is where my things live.</p>
+		<p>I am an artist and programmer. This is where my things live. There's nothing here yet, but there will be soon.</p>
 	</div>
 </body>
 </html>
