--- a/index.html
+++ b/index.html
@@ -3,52 +3,10 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
 	<title>Johnny McNeil</title>
-
-	<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,700,700i|Montserrat:400,400i" rel="stylesheet">
-	<script src="res/particles.js"></script>
-
-	<style type="text/css">
-		html, body {
-			height: 100%;
-			width: 100%;
-			background: #3D3D3D;
-			margin: 0;
-			padding: 0;
-		}
-		canvas {
-			display: block;
-			vertical-align: bottom;
-		}
-		#particles-js {
-			width: 100%;
-			height: 100%;
-			position: absolute;
-			z-index: 1;
-		  background-color: #3D3D3D;
-		  background-image: url('');
-		  background-size: cover;
-		  background-position: 50% 50%;
-		  background-repeat: no-repeat;
-		}
-		#container {
-			position: absolute;
-			width: 90%;
-			top: 5%;
-			left: 5%;
-			color: #FFF;
-			z-index: 2;
-		}
-		h1 {
-			font-size: 36pt;
-			font-family: 'Montserrat', sans-serif;
-		}
-		p {
-			font-size: 24pt;
-			font-family: 'Crimson Text', serif;
-		}
-	</style>
+	<link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700|Montserrat:400,400i" rel="stylesheet">
+	<link href="res/stylesheet.css" type="text/css" rel="stylesheet" />
+	<script src="res/particles.js" />
 </head>
 
 
@@ -60,7 +18,8 @@
 	</script>
 	<div id="container">
 		<h1>Hello World, I'm Johnny.</h1>
-		<p>I am an artist and programmer. This is where my things live. There's nothing here yet, but there will be soon.</p>
+		<p>I'm an artist, programmer, and writer, and I own a small company called <a href="http://studiomcneil.com">Studio McNeil, LLC</a>. My work mostly is mostly digital in nature, although I try to stay open with mediums for expression. Photography and filmmaking are close to my heart, but I also find beauty in well-written code and brilliant websites.</p>
+		<p>Someday I'd like to share more of what I do on this page. I'll get there, but I'm not rushing anything. Thanks for reading. See ya soon.</p>
 	</div>
 </body>
 </html>
