--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Johnny McNeil</title>
-	<link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700|Montserrat:400,400i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat:400,400i" rel="stylesheet">
 	<link href="res/stylesheet.css" type="text/css" rel="stylesheet" />
-	<script src="res/particles.js" />
+	<script src="res/particles.js"></script>
 </head>
 
 
