--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</script>
 	<div id="container">
 		<h1>Hello World, I'm Johnny.</h1>
-		<p>I'm an artist, programmer, and writer, and I own a small company called <a href="http://studiomcneil.com">Studio McNeil, LLC</a>. My work mostly is mostly digital in nature, although I try to stay open with mediums for expression. Photography and filmmaking are close to my heart, but I also find beauty in well-written code and brilliant websites.</p>
+		<p>I'm an artist, programmer, writer, and I own a small company called <a href="http://studiomcneil.com">Studio McNeil, LLC</a>. My work mostly is mostly digital in nature, although I try to stay open with mediums for expression. Photography and filmmaking are close to my heart, but I also find beauty in well-written code and brilliant websites.</p>
 		<p>Someday I'd like to share more of what I do on this page. I'll get there, but I'm not rushing anything. Thanks for reading. See ya soon.</p>
 	</div>
 </body>
