--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript">
 	    var feed = new Instafeed({
 	        get: 'user',
-					userID: 'johnnymmcneil',
+					userID: '1495741419',
 	        clientId: 'c7a33b3ba272494f86c5b6e3b3292c23'
 	    });
 	    feed.run();
