--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
 		<div id="instafeed"></div>
 		<script type="text/javascript">
 		    var feed = new Instafeed({
-					  target: 'instafeed',
 		        get: 'user',
 						userID: '1495741419',
 		        clientId: 'c7a33b3ba272494f86c5b6e3b3292c23',
 						accessToken: '1495741419.c7a33b3.829a918cf6d54c8aa60670f09a50558a',
 						limit: '10',
-						sortBy: 'most-recent',
-						template: '<img src="{{image}}"></img>'
+						sortBy: 'most-recent'
 		    });
-		    userFeed.run();
+		    feed.run();
 		</script>
 	</div>
 </body>
