--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script type="text/javascript">
 		    var feed = new Instafeed({
 		        get: 'user',
-						userID: '1495741419',
+						userId: '1495741419',
 		        clientId: 'dd898335c01f4bbc88028609c3a39e83',
 						accessToken: '1495741419.c7a33b3.829a918cf6d54c8aa60670f09a50558a',
 						limit: '10',
