--- a/index.html
+++ b/index.html
@@ -3,32 +3,42 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Johnny McNeil</title>
-	<link href="https://fonts.googleapis.com/css?family=EB+Garamond|Montserrat:400,400i" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.typekit.net/ery2jvd.css" />
 	<link href="res/stylesheet.css" type="text/css" rel="stylesheet" />
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/instafeed.js/1.4.1/instafeed.min.js"></script>
-  <script type="text/javascript" src"https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src"https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
 
-<body>
-	<div class="avatar" src="res/img/censoredeyes.jpg"></div>
-	<div class="body black">
-		<h1>Follow me on Instagram</h1>
-		<h2><a href="instagram.com/user/johnnymmcneil">@johnnymmcneil</a></h2>
-		<div id="instafeed"></div>
-		<script type="text/javascript">
-		    var feed = new Instafeed({
-		        get: 'user',
-						userId: '1495741419',
-		        clientId: 'c7a33b3ba272494f86c5b6e3b3292c23',
-						accessToken: '1495741419.c7a33b3.829a918cf6d54c8aa60670f09a50558a',
-						sortBy: 'most-recent',
-						template: '<div class="insta"><a href="{{link}}"><img src="{{image}}" /></a></div>',
-						resolution: 'standard_resolution'
-		    });
-		    feed.run();
-		</script>
+<body class='flexer bgWhite tk-futura-pt'>
+	<h1 class="flexable bgYellow">Hi, I'm Johnny McNeil.</h1>
+	<h2 class="flexable bgYellow">I have a lot of hobbies.</h2>
+	<div class="flexable bgWhite">
+		<h2>About Me</h2>
+		<p>I am a digital content producer working in commercial film/photography. My passion for movies as a child has pushed me into this stressful life of so badly wanting to prove myself <em>on the big screen</em>. How romantic?</p>
+	</div>
+	<div class="flexable bgWhite fullWidth noPadding">
+		<div class="flexer-row">
+			<div class="flexable-row social-button-single">
+				<a href="http://instagram.com/johnnymcneil">
+					<img src="res/svg/instagram.svg" alt="Find me on Instagram" />
+				</a>
+			</div>
+			<div class="flexable-row social-button-single">
+				<a href="http://twitter.com/johnnymcneil">
+					<img src="res/svg/twitter.svg" alt="Find me on Twitter" />
+				</a>
+			</div>
+			<div class="flexable-row social-button-double">
+				<a href="https://www.youtube.com/channel/UCLMiuyI03rJLnjUgutcE_qg">
+					<img src="res/svg/youtube.svg" alt="Find me on YouTube" />
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="flexable bgBlack">
+		<p>2018 &copy; Studio McNeil, LLC.</p>
 	</div>
 </body>
 </html>
