--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Johnny McNeil</title>
 	<link rel="stylesheet" href="https://use.typekit.net/ery2jvd.css" />
+	<link href="res/standard.css" type="text/css" rel="stylesheet" />
 	<link href="res/stylesheet.css" type="text/css" rel="stylesheet" />
 	<script type="text/javascript" src"https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
@@ -16,7 +17,9 @@
 	<h2 class="flexable bgYellow">I have a lot of hobbies.</h2>
 	<div class="flexable bgWhite">
 		<h2>About Me</h2>
-		<p>I am a digital content producer working in commercial film/photography. My passion for movies as a child has pushed me into this stressful life of so badly wanting to prove myself <em>on the big screen</em>. How romantic?</p>
+		<p>I am a digital content producer working in commercial film/photography. Although that's more of a hobby, for now. Currently, I work as an assistant manager at a movie theatre.</p>
+		<p>5 Year Goal: Make enough money from my "hobbies" to make them my primary source of income.</p>
+		<p>10 Year Goal: See my name on a silver screen.</p>
 	</div>
 	<div class="flexable bgWhite fullWidth noPadding">
 		<div class="flexer-row">
