--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Johnny McNeil</title>
 	<link rel="stylesheet" href="https://use.typekit.net/ery2jvd.css" />
-	<link href="res/standard.css" type="text/css" rel="stylesheet" />
 	<link href="res/stylesheet.css" type="text/css" rel="stylesheet" />
+	<link href="res/standard.css" type="text/css" rel="stylesheet" />
+	<link href="res/favicon0-5x.png" type="image/png" rel="shortcut icon" />
 	<script type="text/javascript" src"https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
@@ -17,31 +18,69 @@
 	<h2 class="flexable bgYellow">I have a lot of hobbies.</h2>
 	<div class="flexable bgWhite">
 		<h2>About Me</h2>
-		<p>I am a digital content producer working in commercial film/photography. Although that's more of a hobby, for now. Currently, I work as an assistant manager at a movie theatre.</p>
-		<p>5 Year Goal: Make enough money from my "hobbies" to make them my primary source of income.</p>
-		<p>10 Year Goal: See my name on a silver screen.</p>
+		<p>I am a hobbyist filmmaker and photographer, hoping to soon transition my passion into a source of income. Currently, I'm looking for a message to spread. There are so many important things that could be talked about through film and photography that I just don't know where to begin.</p>
+		<p>Check me out on my various profiles. My portfolio is barren at the moment, so maybe check back every couple of months? k thanks</p>
 	</div>
 	<div class="flexable bgWhite fullWidth noPadding">
 		<div class="flexer-row">
-			<div class="flexable-row social-button-single">
+			<div class="flexable-row social-button-single noPadding">
 				<a href="http://instagram.com/johnnymcneil">
-					<img src="res/svg/instagram.svg" alt="Find me on Instagram" />
+					<svg id="instagram" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+					<defs>
+						<style>.inst-background{fill:#ff1f55;}</style>
+					</defs>
+					<title>Instagram</title>
+					<rect id="svg-bg" class="inst-background" width="128" height="128"/>
+					<path d="M64,32c-8.69,0-9.78,0-13.19.19A23.59,23.59,0,0,0,43,33.68,16.34,16.34,0,0,0,33.68,43a23.59,23.59,0,0,0-1.49,7.77C32,54.22,32,55.31,32,64s0,9.78.19,13.19A23.59,23.59,0,0,0,33.68,85,16.34,16.34,0,0,0,43,94.32a23.59,23.59,0,0,0,7.77,1.49C54.22,96,55.31,96,64,96s9.78,0,13.19-.19A23.59,23.59,0,0,0,85,94.32,16.34,16.34,0,0,0,94.32,85a23.59,23.59,0,0,0,1.49-7.77C96,73.78,96,72.69,96,64s0-9.78-.19-13.19A23.59,23.59,0,0,0,94.32,43,16.34,16.34,0,0,0,85,33.68a23.59,23.59,0,0,0-7.77-1.49C73.78,32,72.69,32,64,32Zm0,5.77c8.54,0,9.56,0,12.93.18a17.81,17.81,0,0,1,5.94,1.1A10.66,10.66,0,0,1,89,45.13a17.81,17.81,0,0,1,1.1,5.94c.15,3.37.18,4.39.18,12.93s0,9.56-.18,12.93A17.81,17.81,0,0,1,89,82.87,10.66,10.66,0,0,1,82.87,89a17.81,17.81,0,0,1-5.94,1.1c-3.37.15-4.39.18-12.93.18s-9.56,0-12.93-.18A17.81,17.81,0,0,1,45.13,89a10.66,10.66,0,0,1-6.08-6.08A17.81,17.81,0,0,1,38,76.93c-.15-3.37-.18-4.39-.18-12.93s0-9.56.18-12.93a17.81,17.81,0,0,1,1.1-5.94,10.66,10.66,0,0,1,6.08-6.08A17.81,17.81,0,0,1,51.07,38c3.37-.15,4.39-.18,12.93-.18"/>
+					<path d="M64,74.67A10.67,10.67,0,1,1,74.67,64,10.67,10.67,0,0,1,64,74.67Zm0-27.1A16.43,16.43,0,1,0,80.43,64,16.42,16.42,0,0,0,64,47.57Z"/>
+					<path d="M84.92,46.92a3.84,3.84,0,1,1-3.84-3.84,3.84,3.84,0,0,1,3.84,3.84Z"/>
+				</svg>
 				</a>
 			</div>
-			<div class="flexable-row social-button-single">
+			<div class="flexable-row social-button-single noPadding">
 				<a href="http://twitter.com/johnnymcneil">
-					<img src="res/svg/twitter.svg" alt="Find me on Twitter" />
+					<svg id="twitter" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+						<defs>
+							<style>
+								.tw-background {
+									fill: #1da1f2;
+								}
+								.cls-2 {
+								fill: #fff;
+								}
+							</style>
+						</defs>
+						<title>Twitter</title>
+						<rect id="svg-bg" class="tw-background" width="128" height="128"/>
+						<path class="cls-2" d="M49.15,96.51c30.18,0,46.69-25,46.69-46.69,0-.7,0-1.4,0-2.11A33.32,33.32,0,0,0,104,39.2a33.07,33.07,0,0,1-9.44,2.59,16.51,16.51,0,0,0,7.23-9.09,32.5,32.5,0,0,1-10.43,4A16.41,16.41,0,0,0,63,47.9a18.65,18.65,0,0,0,.41,3.75A46.57,46.57,0,0,1,29.57,34.5a16.47,16.47,0,0,0,5.09,21.92,16.75,16.75,0,0,1-7.43-2.05v.22a16.46,16.46,0,0,0,13.15,16.1,16.09,16.09,0,0,1-4.32.57A16.31,16.31,0,0,1,33,71,16.42,16.42,0,0,0,48.32,82.37a32.93,32.93,0,0,1-20.38,7A31.58,31.58,0,0,1,24,89.18a46.65,46.65,0,0,0,25.12,7.33"/>
+					</svg>
 				</a>
 			</div>
-			<div class="flexable-row social-button-double">
+			<div class="flexable-row social-button-single noPadding">
 				<a href="https://www.youtube.com/channel/UCLMiuyI03rJLnjUgutcE_qg">
-					<img src="res/svg/youtube.svg" alt="Find me on YouTube" />
+					<svg id="youtube" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
+						<style type="text/css">
+							.yt-background{fill:#510000;}
+							.st1{fill:#FF0000;}
+							.st2{fill:#FFFFFF;}
+						</style>
+						<title>YouTube</title>
+						<rect id="svg-bg" class="yt-background" width="128" height="128"/>
+						<path class="st1" d="M91.4,50.3c-0.7-2.5-2.6-4.4-5-5.1C81.9,44,64,44,64,44s-17.9,0-22.3,1.2c-2.4,0.7-4.4,2.6-5,5.1
+							C35.4,54.7,35.4,64,35.4,64s0,9.3,1.2,13.8c0.6,2.5,2.6,4.4,5,5.1C46.1,84,64,84,64,84s17.9,0,22.3-1.2c2.4-0.7,4.3-2.6,5-5.1
+							c1.2-4.4,1.2-13.8,1.2-13.8S92.6,54.7,91.4,50.3z"/>
+						<polygon class="st2" points="58.3,72.6 73.1,64 58.3,55.4 "/>
+					</svg>
 				</a>
 			</div>
 		</div>
 	</div>
-	<div class="flexable bgBlack">
-		<p>2018 &copy; Studio McNeil, LLC.</p>
+	<div class="flexable fullWidth noPadding bgWhite">
+		<div class="flexer-row">
+			<div class="flexable-row bgBlack">
+				<p>2018 &copy; Studio McNeil, LLC.</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
