Updated to be more resume-like.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 	<h2 class="flexable bgYellow">I have a lot of hobbies.</h2>
 	<div class="flexable bgWhite">
 		<h2>About Me</h2>
-		<p>I am a hobbyist filmmaker and photographer, hoping to soon transition my passion into a source of income. Currently, I'm looking for a message to spread. There are so many important things that could be talked about through film and photography that I just don't know where to begin.</p>
-		<p>Check me out on my various profiles. My portfolio is barren at the moment, so maybe check back every couple of months? k thanks</p>
+		<p>I am the owner of Studio McNeil, LLC. I am experienced in photography, video editing, and just about anything computer related. I've been learning the digital arts since a very young age, and have not wasted my time. I am proficient in the Adobe Creative Cloud applications, Final Cut Pro X, and have no trouble learning new software.</p><p>I grew up with the Internet. It has molded me to be who I am, and I have had no illusions about its importance. I am looking for a position that will allow me to express my generation's view of the world in an artistic and technical way.</p>
 	</div>
 	<div class="flexable bgWhite fullWidth noPadding">
 		<div class="flexer-row">
