Updated copy and styling.
-all mention of looking for a job
+mention of looking for freelance work
*centered flex

--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
 
 
 <body class='flexer bgWhite tk-futura-pt'>
-	<h1 class="flexable bgYellow">Hi, I'm Johnny McNeil.</h1>
-	<h2 class="flexable bgYellow">I have a lot of hobbies.</h2>
+	<h1 class="flexable bgGreen">Hi, I'm Johnny McNeil.</h1>
+	<h2 class="flexable bgGreen">I want to make your video advertisements.</h2>
 	<div class="flexable bgWhite">
-		<h2>About Me</h2>
-		<p>I am the owner of Studio McNeil, LLC. I am experienced in photography, video editing, and just about anything computer related. I've been learning the digital arts since a very young age, and have not wasted my time. I am proficient in the Adobe Creative Cloud applications, Final Cut Pro X, and have no trouble learning new software.</p><p>I grew up with the Internet. It has molded me to be who I am, and I have had no illusions about its importance. I am looking for a position that will allow me to express my generation's view of the world in an artistic and technical way.</p>
+		<h2>Your deserve quality video ads, and I make them.</h2>
+		<p>Do you think you could be selling more? Are you having trouble getting customers in the door? Behind every major brand is a brilliant marketing team, and I have had the joy of working with some of the best in Arizona.</p><p>I want to help you grow by crafting video advertisements that will help you take your company to the next level. Whether you're a small mom and pop looking to advertise on Facebook or a wholesaler looking to entice business partners with internal videos, I can (and want!) to help you.</p>
+		<p>Your business deserves quality advertising, and you deserve affordable pricing. I can offer you both.</p>
+		<p>Contact me at&nbsp;
+			<script language="JavaScript">
+				var username = "StudioMcNeilLLC";
+				var hostname = "gmail.com";
+				var linktext = username + "@" + hostname ;
+				document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+			</script>
+		&nbsp;to get a quote.</p>
 	</div>
 	<div class="flexable bgWhite fullWidth noPadding">
 		<div class="flexer-row">
