--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 
 <body class='flexer bgWhite tk-futura-pt'>
-	<h1 class="flexable bgGreen">Hi, I'm Johnny McNeil.</h1>
-	<h2 class="flexable bgGreen">I want to make your video advertisements.</h2>
+	<h1 class="flexable bgGreen">Hi, I'm Johnny McNeil</h1>
+	<h2 class="flexable bgGreen">Owner of Studio McNeil, LLC</h2>
 	<div class="flexable bgWhite">
 		<h2>Your deserve quality video ads, and I make them.</h2>
 		<p>Do you think you could be selling more? Are you having trouble getting customers in the door? Behind every major brand is a brilliant marketing team, and I have had the joy of working with some of the best in Arizona.</p><p>I want to help you grow by crafting video advertisements that will help you take your company to the next level. Whether you're a small mom and pop looking to advertise on Facebook or a wholesaler looking to entice business partners with internal videos, I can (and want!) to help you.</p>
