--- a/index.html
+++ b/index.html
@@ -6,29 +6,35 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Johnny McNeil</title>
 	<link rel="stylesheet" href="https://use.typekit.net/ery2jvd.css" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i" rel="stylesheet">
 	<link href="res/stylesheet.css" type="text/css" rel="stylesheet" />
-	<link href="res/standard.css" type="text/css" rel="stylesheet" />
 	<link href="res/favicon0-5x.png" type="image/png" rel="shortcut icon" />
 	<script type="text/javascript" src"https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
 
-<body class='flexer bgWhite tk-futura-pt'>
-	<h1 class="flexable bgWhite">Hi, I'm Johnny McNeil</h1>
-	<h2 class="flexable bgWhite">Entrepreneur and Video Producer</h2>
-	<div class="flexable bgWhite">
-		<div class="flexer-row">
-			<a class="a-button a-blue" href="https://blog.johnnymcneil.com">Blog</a>
-			<a class="a-button a-blue" href="https://instagram.com/johnnymcneil">Instagram</a>
-			<a class="a-button a-blue" href="https://twitter.com/johnnymcneil">Twitter</a>
-		</div>
-	</div>
-	<div class="flexable fullWidth noPadding bgWhite">
-		<div class="flexer-row">
-			<div class="flexable-row bgWhite">
-				<p>2019 &copy; Studio McNeil, LLC.</p>
+<body>
+	<div class="container">
+		<header>
+			<h1>Johnny McNeil</h1>
+			<h2>Advertising and Digital Media</h2>
+			<div>
+				<a class="a-button" href="https://instagram.com/johnnymcneil">Instagram</a>
+				<a class="a-button" href="https://twitter.com/johnnymcneil">Twitter</a>
+				<a class="a-button" href="https://blog.johnnymcneil.com">Wordpress</a>
 			</div>
-		</div>
+		</header>
+		<article>
+			<h1>Who Am I?</h1>
+			<p>I am an experienced digital media specialist trying to make a difference in the world. My goal is not to sell anything to you here, but rather to give you an insight about how I operate and what I am trying to do. If you would like to collaborate then shoot me a message via one of the social links above.</p>
+		</article>
+		<article>
+			<h1>Mission Statement</h1>
+			<p>I am committed to improving the quality of life by introducing people to unfamiliar forms of thinking.</p>
+		</article>
+		<footer>
+			<p>2019 &copy; Studio McNeil, LLC.</p>
+		</footer>
 	</div>
 </body>
 </html>
