total redesign again bc fuck me

--- a/index.html
+++ b/index.html
@@ -14,27 +14,26 @@
 
 
 <body>
-	<div class="container">
-		<header>
-			<h1>Johnny McNeil</h1>
-			<h2>Advertising and Digital Media</h2>
-			<div>
-				<a class="a-button" href="https://instagram.com/johnnymcneil">Instagram</a>
-				<a class="a-button" href="https://twitter.com/johnnymcneil">Twitter</a>
-				<a class="a-button" href="https://blog.johnnymcneil.com">Wordpress</a>
+	<div id="page-container">
+		<div id="content-wrap">
+			<header>
+				<h1>Johnny McNeil</h1>
+				<h2><i>Aesthetics & Minimalism</i></h2>
+			</header>
+			<div class="ascii-art">
+				<p>&nbsp;_&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_______&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_______&nbsp;&nbsp;_&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_________&nbsp;_&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_______&nbsp;</p>
+				<p>(&nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;/|(&nbsp;&nbsp;___&nbsp;&nbsp;)|\&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/|&nbsp;&nbsp;(&nbsp;&nbsp;___&nbsp;&nbsp;)(&nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;/|(&nbsp;\&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\__&nbsp;&nbsp;&nbsp;__/(&nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;/|(&nbsp;&nbsp;____&nbsp;\</p>
+				<p>|&nbsp;&nbsp;\&nbsp;&nbsp;(&nbsp;||&nbsp;(&nbsp;&nbsp;&nbsp;)&nbsp;||&nbsp;)&nbsp;&nbsp;&nbsp;(&nbsp;|&nbsp;&nbsp;|&nbsp;(&nbsp;&nbsp;&nbsp;)&nbsp;||&nbsp;&nbsp;\&nbsp;&nbsp;(&nbsp;||&nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)&nbsp;(&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;\&nbsp;&nbsp;(&nbsp;||&nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;\/</p>
+				<p>|&nbsp;&nbsp;&nbsp;\&nbsp;|&nbsp;||&nbsp;|&nbsp;&nbsp;&nbsp;|&nbsp;||&nbsp;|&nbsp;_&nbsp;|&nbsp;|&nbsp;&nbsp;|&nbsp;|&nbsp;&nbsp;&nbsp;|&nbsp;||&nbsp;&nbsp;&nbsp;\&nbsp;|&nbsp;||&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;|&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;\&nbsp;|&nbsp;||&nbsp;(__&nbsp;&nbsp;&nbsp;&nbsp;</p>
+				<p>|&nbsp;(\&nbsp;\)&nbsp;||&nbsp;|&nbsp;&nbsp;&nbsp;|&nbsp;||&nbsp;|(&nbsp;)|&nbsp;|&nbsp;&nbsp;|&nbsp;|&nbsp;&nbsp;&nbsp;|&nbsp;||&nbsp;(\&nbsp;\)&nbsp;||&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;|&nbsp;&nbsp;&nbsp;|&nbsp;(\&nbsp;\)&nbsp;||&nbsp;&nbsp;__)&nbsp;&nbsp;&nbsp;</p>
+				<p>|&nbsp;|&nbsp;\&nbsp;&nbsp;&nbsp;||&nbsp;|&nbsp;&nbsp;&nbsp;|&nbsp;||&nbsp;||&nbsp;||&nbsp;|&nbsp;&nbsp;|&nbsp;|&nbsp;&nbsp;&nbsp;|&nbsp;||&nbsp;|&nbsp;\&nbsp;&nbsp;&nbsp;||&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;|&nbsp;&nbsp;&nbsp;|&nbsp;|&nbsp;\&nbsp;&nbsp;&nbsp;||&nbsp;(&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+				<p>|&nbsp;)&nbsp;&nbsp;\&nbsp;&nbsp;||&nbsp;(___)&nbsp;||&nbsp;()&nbsp;()&nbsp;|&nbsp;&nbsp;|&nbsp;(___)&nbsp;||&nbsp;)&nbsp;&nbsp;\&nbsp;&nbsp;||&nbsp;(____/\___)&nbsp;(___|&nbsp;)&nbsp;&nbsp;\&nbsp;&nbsp;||&nbsp;(____/\</p>
+				<p>|/&nbsp;&nbsp;&nbsp;&nbsp;)_)(_______)(_______)&nbsp;&nbsp;(_______)|/&nbsp;&nbsp;&nbsp;&nbsp;)_)(_______/\_______/|/&nbsp;&nbsp;&nbsp;&nbsp;)_)(_______/</p>
 			</div>
-		</header>
-		<article>
-			<h1>Who Am I?</h1>
-			<p>I am an experienced digital media specialist trying to make a difference in the world. My goal is not to sell anything to you here, but rather to give you an insight about how I operate and what I am trying to do. If you would like to collaborate then shoot me a message via one of the social links above.</p>
-		</article>
-		<article>
-			<h1>Mission Statement</h1>
-			<p>I am committed to improving the quality of life by introducing people to unfamiliar forms of thinking.</p>
-		</article>
-		<footer>
-			<p>2019 &copy; Studio McNeil, LLC.</p>
-		</footer>
+		</div>
 	</div>
+	<footer>
+		<h2>&copy; 2019<script>new Date().getFullYear()>2019&&document.write("-"+new Date().getFullYear());</script>, Johnny McNeil.</h2>
+	</footer>
 </body>
 </html>
