--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 				<p>|&nbsp;)&nbsp;&nbsp;\&nbsp;&nbsp;||&nbsp;(___)&nbsp;||&nbsp;()&nbsp;()&nbsp;|&nbsp;&nbsp;|&nbsp;(___)&nbsp;||&nbsp;)&nbsp;&nbsp;\&nbsp;&nbsp;||&nbsp;(____/\___)&nbsp;(___|&nbsp;)&nbsp;&nbsp;\&nbsp;&nbsp;||&nbsp;(____/\</p>
 				<p>|/&nbsp;&nbsp;&nbsp;&nbsp;)_)(_______)(_______)&nbsp;&nbsp;(_______)|/&nbsp;&nbsp;&nbsp;&nbsp;)_)(_______/\_______/|/&nbsp;&nbsp;&nbsp;&nbsp;)_)(_______/</p>
 			</div>
+			<div class="max-width">
+				<img src="res/SedonaLandscape.jpg" width="100%" />
+			</div>
 		</div>
 	</div>
 	<footer>
