Slow transition to real content begins
* commented out the sedona photo
* added in a blurb about myself and the digital world

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div id="page-container">
 		<header>
 			<h1>Johnny McNeil</h1>
-			<h2><i>Aesthetics & Minimalism</i></h2>
+			<h2><i>Aesthetics & Digital Art</i></h2>
 		</header>
 		<div class="ascii-art">
 			<p>&nbsp;_&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_______&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_______&nbsp;&nbsp;_&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_________&nbsp;_&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;_______&nbsp;</p>
@@ -29,8 +29,13 @@
 			<p>|&nbsp;)&nbsp;&nbsp;\&nbsp;&nbsp;||&nbsp;(___)&nbsp;||&nbsp;()&nbsp;()&nbsp;|&nbsp;&nbsp;|&nbsp;(___)&nbsp;||&nbsp;)&nbsp;&nbsp;\&nbsp;&nbsp;||&nbsp;(____/\___)&nbsp;(___|&nbsp;)&nbsp;&nbsp;\&nbsp;&nbsp;||&nbsp;(____/\</p>
 			<p>|/&nbsp;&nbsp;&nbsp;&nbsp;)_)(_______)(_______)&nbsp;&nbsp;(_______)|/&nbsp;&nbsp;&nbsp;&nbsp;)_)(_______/\_______/|/&nbsp;&nbsp;&nbsp;&nbsp;)_)(_______/</p>
 		</div>
-		<div class="max-width">
+		<!--<div class="img-max-width">
 			<img src="res/SedonaLandscape.jpg" width="100%" />
+		</div>-->
+		<div class="max-width">
+			<p>The cloud of information raised me from the time I had rough motor skills until the start of the COVID-19 pandemic. From that point, I was pushed by circumstance into a void of static and noise.</p>
+			<p>I was on my own, possibly for the first time ever. I had no direction, no intention, and no mastery. I was in the middle of a job that was supposed to become a career, only to later realize that it was instead my shackles.</p>
+			<p>Until 2021, I remained bound. Now, my bonds have been loosed, and I am a free entity again. I return to the cloud once more.</p>
 		</div>
 		<footer>
 			<h2>&copy; 2019<script>new Date().getFullYear()>2019&&document.write("-"+new Date().getFullYear());</script>, Johnny McNeil.</h2>
