Added more text

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 			<img src="res/SedonaLandscape.jpg" width="100%" />
 		</div>-->
 		<div class="max-width">
+			<h2>Sat 06 Mar 2021</h2>
+			<h2>Give way to the extended viewpoint.</h2>
+			<p>For the longest time I believed that in order for something new to be born, something old has to die. This relies on the binary principle that birth and death are to mutually exclusive phenomena. Perhaps we are too often looking at the world with a limited perspective. Maybe we see a coin flip and land on one side and then our minds capture a snapshot of that last moment as the coin rests where it fell, forgetting the moments it spent spinning through the air.</p>
+			<p>We are afraid of automation and our new digital world because we think of ourselves as one side of the coin, and the machines as the other side. We seem too shocked by the possibility of humankind landing facedown that we forget we are just the other side of the coin. And again, we forget that magical couple of seconds we spend in the air, flipping head over tails, over and over.</p>
+		</div>
+		<div class="max-width">
+			<h2>Fri 05 Mar 2021</h2>
+			<h2>From the noise, a blip.</h2>
 			<p>The cloud of information raised me from the time I had rough motor skills until the start of the COVID-19 pandemic. From that point, I was pushed by circumstance into a void of static and noise.</p>
 			<p>I was on my own, possibly for the first time ever. I had no direction, no intention, and no mastery. I was in the middle of a job that was supposed to become a career, only to later realize that it was instead my shackles.</p>
 			<p>Until 2021, I remained bound. Now, my bonds have been loosed, and I am a free entity again. I return to the cloud once more.</p>
