added social links to footer and updated title for seo friendliness

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Johnny McNeil</title>
+	<title>Johnny McNeil - Now Online</title>
 	<link rel="stylesheet" href="https://use.typekit.net/ery2jvd.css" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i" rel="stylesheet">
 	<link href="res/stylesheet.css" type="text/css" rel="stylesheet" />
@@ -46,7 +46,10 @@
 			<p>Until 2021, I remained bound. Now, my bonds have been loosed, and I am a free entity again. I return to the cloud once more.</p>
 		</div>
 		<footer>
-			<h2>&copy; 2019<script>new Date().getFullYear()>2019&&document.write("-"+new Date().getFullYear());</script>, Johnny McNeil.</h2>
+			<i>
+				<h2>&copy; 2019<script>new Date().getFullYear()>2019&&document.write("-"+new Date().getFullYear());</script>, Johnny McNeil.</h2>
+				<p><a href="https://twitter.com/johnnymcneil">Twitter</a>&nbsp;&nbsp;&nbsp;<a href="https://instagram.com/johnnymcneil">Instagram</a></p>
+			</i>
 		</footer>
 	</div>
 </body>
